fixed hashtag spacing

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -388,7 +388,6 @@ left: 30px !important;
 .hashtag a {
     color: #00aced;
     display: inline-block;
-    margin-left: 5px;
     font-weight: 700
 }
 
